--- a/ui/index.html
+++ b/ui/index.html
@@ -7,6 +7,9 @@
         <div class="center">
             <img src="/ui/madi.png" class="img-medium"/>
         </div>
+        <div class="center">
+            <img src="E:\Images\Le_Vadakkott\DSC_1537.jpg" class="img-mediium"/>
+        </div>
         <br>
         <div class="center text-big bold">
             Hi! I am Shaneeb, this is my first webapp.
