--- a/ui/index.html
+++ b/ui/index.html
@@ -8,7 +8,7 @@
             <img src="/ui/madi.png" class="img-medium"/>
         </div>
         <div class="center">
-            <img src="E:\Images\Le_Vadakkott\DSC_1537.jpg" class="img-mediium"/>
+            <img src="E:\Images\Le_Vadakkott\DSC_1537.jpeg" class="img-mediium"/>
         </div>
         <br>
         <div class="center text-big bold">
