--- a/ui/index.html
+++ b/ui/index.html
@@ -7,6 +7,11 @@
         <div class="center">
             <img src="/ui/madi.png" class="img-medium"/>
         </div>
+        <div class="center">
+            <img src="<div class="center">
+            <img src="/ui/madi.png" class="img-medium"/>
+        </div>" class="img-medium"/>
+        </div>
         <br>
         <div class="center text-big bold">
             Hi! I am Shaneeb, this is my first webapp.
