[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -8,9 +8,7 @@
             <img src="/ui/madi.png" class="img-medium"/>
         </div>
         <div class="center">
-            <img src="<div class="center">
-            <img src="/ui/madi.png" class="img-medium"/>
-        </div>" class="img-medium"/>
+            <img src="https://lh3.googleusercontent.com/-_WHW4bqL5I0/AAAAAAAAAAI/AAAAAAAAAFE/7BMVsmnDu7M/photo.jpg" class="img-medium"/>
         </div>
         <br>
         <div class="center text-big bold">
