[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -10,6 +10,7 @@
         <br>
         <div class="center text-big bold">
             Hi! I am Shaneeb, this is my first webapp.
+I'm a mechanical engineering student.
         </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
